# jsonl2html

./: .gitignore  ReadMe.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: products.json  single_object.json  small.html  small.jsonl  test.json
jsonl2html/: __init__.py  convert.py  create_table_of_content.py
tests/: test_config.py  test_create_table_content.py
