[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonl2html"
version = "0.2.3"
description = "A tool to convert JSONL to HTML"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Adamenko Pavel", email = "padamenko@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
jsonl2html = "jsonl2html.convert:main_bash_entry_point"

[project.urls]
"Homepage" = "https://github.com/padap/jsonl2html"
"Bug Tracker" = "https://github.com/padap/jsonl2html/issues"

[tool.setuptools]
package-data = {"jsonl2html" = ["html_template.html", "config.json"]}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
